AI: in graph: make the dotted line to the grey nodes much shorter. next, continue to improve the graph visual and workflow and ease of usage as you wish.

--- a/index.html
+++ b/index.html
@@ -744,8 +744,8 @@
 
       .graph-view-node.proxy circle {
         stroke-dasharray: 3, 3;
-        fill: var(--disabled-bg);
-        stroke: var(--disabled-border);
+        fill: rgba(var(--panel-bg-rgb), 0.1);
+        stroke: var(--text-tertiary);
         filter: none;
       }
       .graph-view-node.proxy:hover circle {
@@ -753,13 +753,13 @@
         stroke: var(--primary-accent);
       }
       .graph-view-node.proxy .node-label {
-        fill: var(--text-tertiary);
-        font-size: 9px;
-        font-weight: 500;
+        fill: var(--text-secondary);
+        font-size: 10px;
+        font-weight: 600;
+        text-transform: uppercase;
       }
       .graph-view-node.proxy .node-rune-icon {
-        fill: var(--text-secondary);
-        font-size: 1.1em;
+        display: none; /* Icon is replaced by internal label */
       }
 
 
