AI: add the button to clear the history action log. next, continue to improve the graph visual and workflow and ease of usage as you wish.

--- a/index.html
+++ b/index.html
@@ -732,12 +732,37 @@
         transform: scale(1.1);
         filter: drop-shadow(0px 3px 6px rgba(var(--primary-accent-rgb), 0.4));
       }
-      .graph-view-node.selected circle { stroke: var(--graph-node-selected-stroke); stroke-width: 3px; filter: drop-shadow(0 0 8px var(--graph-node-selected-stroke)); }
+      .graph-view-node.selected circle, .graph-view-node.on-active-path circle { 
+        stroke: var(--graph-node-selected-stroke) !important;
+        stroke-width: 3.5px !important;
+      }
+      .graph-view-node.selected circle {
+        filter: drop-shadow(0 0 8px var(--graph-node-selected-stroke));
+      }
+      .graph-view-node.on-active-path:not(.selected) circle {
+        stroke: var(--primary-accent-dark) !important;
+        filter: drop-shadow(0 0 5px var(--primary-accent));
+      }
       .graph-view-node text.node-label { text-shadow: 0 0 3px var(--app-bg), 0 0 3px var(--app-bg), 0 0 3px var(--app-bg); } 
       html[data-theme='dark'] .graph-view-node text.node-label { text-shadow: 0 0 3px var(--app-bg), 0 0 3px var(--app-bg), 0 0 3px var(--app-bg), 0 0 5px var(--primary-accent-light); }
       
+      .graph-view-link, .graph-view-project-link {
+        transition: stroke-opacity 0.3s ease, stroke-width 0.3s ease, stroke 0.3s ease;
+      }
       .graph-view-link { stroke: var(--graph-link-stroke-ecosystem); stroke-linecap: round; }
-      .graph-view-project-link { stroke: var(--primary-accent); stroke-linecap: round; }
+      .graph-view-project-link { stroke: var(--secondary-accent-dark); stroke-linecap: round; stroke-opacity: 0.8; stroke-dasharray: 4,4; }
+
+      .graph-view-link.active-path {
+        stroke: var(--primary-accent) !important;
+        stroke-width: 2.5px !important;
+        stroke-opacity: 1 !important;
+      }
+      .graph-view-link-marker {
+        fill: var(--graph-link-stroke-ecosystem);
+      }
+      .graph-view-link-marker.active-path {
+        fill: var(--primary-accent) !important;
+      }
       
       .graph-view-node .node-rune-icon { font-size: 0.7em; dominant-baseline: middle; text-anchor: middle; fill: var(--text-primary); }
       .graph-view-node .node-icon { font-size: 0.6em; }
