--- a/index.html
+++ b/index.html
@@ -551,6 +551,24 @@
       .whispering-runes-panel .action-feedback .rune-icon { transform: scale(1.3) rotate(15deg); color: var(--primary-accent-dark); }
       .whispering-runes-panel .no-node-message { padding: 8px; text-align: center; font-style: italic; color: var(--text-tertiary); font-size: 0.85em; } /* Reduced padding/font-size */
 
+      .whispering-runes-panel .importance-cycle-button {
+        justify-content: flex-start;
+        font-weight: 500;
+        border: 1px solid;
+        transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
+        box-shadow: none;
+      }
+      .whispering-runes-panel .importance-cycle-button:hover:not(:disabled) {
+        box-shadow: 0 0 4px var(--primary-accent-light);
+        border-color: var(--primary-accent);
+      }
+      .whispering-runes-panel .importance-cycle-button.importance-minor { background-color: var(--importance-minor-bg); color: var(--importance-minor-text); border-color: var(--importance-minor-border); }
+      .whispering-runes-panel .importance-cycle-button.importance-minor:hover:not(:disabled) { background-color: var(--importance-minor-bg); }
+      .whispering-runes-panel .importance-cycle-button.importance-common { background-color: var(--importance-common-bg); color: var(--importance-common-text); border-color: var(--importance-common-border); }
+      .whispering-runes-panel .importance-cycle-button.importance-common:hover:not(:disabled) { background-color: var(--importance-common-bg); }
+      .whispering-runes-panel .importance-cycle-button.importance-major { background-color: var(--importance-major-bg); color: var(--importance-major-text); border-color: var(--importance-major-border); }
+      .whispering-runes-panel .importance-cycle-button.importance-major:hover:not(:disabled) { background-color: var(--importance-major-bg); }
+
       .panel-header { font-size: 1.1em; font-weight: 600; color: var(--text-primary); margin-bottom: 12px; display: flex; justify-content: space-between; align-items: center; } /* Reduced font size/margin */
       .panel-sub-header { font-size: 0.95em; font-weight: 600; color: var(--text-secondary); margin-top: 12px; margin-bottom: 8px; border-bottom: 1px solid var(--border-color); padding-bottom: 4px; } /* Reduced font size/margins/padding */
       .panel-button-group { display: flex; flex-direction: column; gap: 8px; } /* Reduced gap */
@@ -579,9 +597,31 @@
       .tooltip-text.position-right { top: 50%; left: 105%; transform: translateY(-50%); }
       .tooltip-text.position-bottom { top: 110%; left: 50%; transform: translateX(-50%); }
       .tooltip-text.position-top { bottom: 115%; left: 50%; transform: translateX(-50%); }
-      .contextual-help-icon { display: inline-flex; align-items: center; justify-content: center; width: 16px; height: 16px; border-radius: 50%; background-color: var(--text-tertiary); color: var(--panel-bg); font-size: 0.7em; font-weight: bold; cursor: help; margin-left: 4px; user-select: none; } /* Reduced size/margin */
-      .contextual-help-icon:hover, .contextual-help-icon:focus { background-color: var(--text-primary); }
-      .contextual-help-icon .tooltip-text { white-space: normal; line-height: 1.4; padding: 6px 8px; }
+      .contextual-help-icon { 
+        display: inline-flex; align-items: center; justify-content: center; 
+        width: 16px; height: 16px; border-radius: 50%; 
+        background-color: var(--text-tertiary); color: var(--panel-bg); 
+        font-size: 0.8em; font-weight: bold; font-family: 'Georgia', serif;
+        cursor: help; margin-left: 4px; user-select: none; 
+        transition: background-color 0.2s, transform 0.2s;
+        border: 1px solid rgba(0,0,0,0.1);
+      }
+      .contextual-help-icon:hover, .contextual-help-icon:focus-within { 
+        background-color: var(--primary-accent); transform: scale(1.1);
+      }
+      html[data-theme='light'] .contextual-help-icon {
+        background-color: var(--border-color-strong);
+      }
+      html[data-theme='light'] .contextual-help-icon:hover, html[data-theme='light'] .contextual-help-icon:focus-within {
+        background-color: var(--primary-accent-dark);
+      }
+      .contextual-help-icon .tooltip-text { 
+        white-space: normal; line-height: 1.4; padding: 8px 10px; 
+        background-color: var(--focus-panel-bg);
+        color: var(--focus-panel-text);
+        border: 1px solid var(--primary-accent-light);
+        text-align: left;
+      }
 
       .modal-overlay-basic { position: fixed; inset: 0; background-color: rgba(0,0,0,0.7); display: flex; align-items: center; justify-content: center; z-index: 1000; padding: 15px; backdrop-filter: blur(4px); } /* Reduced padding */
       .modal-content-basic { background-color: var(--panel-bg); padding: 18px 22px; border-radius: var(--border-radius-lg); box-shadow: var(--box-shadow-lg); max-width: 90vw; max-height: 90vh; overflow-y: auto; animation: modalFadeIn 0.3s ease-out; border-top: 3px solid var(--primary-accent); } /* Reduced padding and added top border */
@@ -716,20 +756,28 @@
       .graph-view-node .node-icon { font-size: 0.6em; }
 
       .graph-view-node.proxy circle {
-        stroke-dasharray: 3, 3;
-        fill: rgba(var(--panel-bg-rgb), 0.1);
-        stroke: var(--text-tertiary);
-        filter: none;
+        stroke-dasharray: 4, 4;
+        stroke-width: 2px;
+        fill: transparent;
+        stroke: var(--secondary-accent-dark);
+        filter: drop-shadow(0px 1px 2px rgba(0,0,0,0.2));
+        transition: transform 0.2s ease-out, stroke 0.2s ease-out, fill 0.2s ease-out;
+      }
+      html[data-theme='dark'] .graph-view-node.proxy circle {
+        stroke: var(--secondary-accent);
       }
       .graph-view-node.proxy:hover circle {
-        transform: scale(1.05);
-        stroke: var(--primary-accent);
+        transform: scale(1.1);
+        stroke: var(--primary-accent-light);
+        fill: rgba(var(--primary-accent-rgb), 0.1);
+        stroke-dasharray: none;
       }
       .graph-view-node.proxy .node-label {
         fill: var(--text-secondary);
-        font-size: 10px;
+        font-size: 11px; /* Slightly larger */
         font-weight: 600;
         text-transform: uppercase;
+        /* The label is outside, so this is fine. I'll just style the circle. */
       }
       .graph-view-node.proxy .node-rune-icon {
         display: none; /* Icon is replaced by internal label */
