--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         --yggdrasil-leaf-green: #2E7D32; 
         --yggdrasil-rune-glow: var(--primary-accent-light);
 
-        --sidebar-default-width: 260px; /* Reduced sidebar width */
+        --sidebar-default-width: 280px; /* Adjusted sidebar width for better content flow */
         --sidebar-collapsed-width: 50px; /* Reduced collapsed sidebar width */
         --top-bar-height: 50px; 
       }
@@ -460,7 +460,7 @@
       .sidebar-tab-label { font-size: 0.75em; display: block; margin-top: 1px; } /* Smaller label */
 
 
-      .sidebar-tools-area { flex-grow: 1; padding: 10px 8px; overflow-y: auto; display: flex; flex-direction: column; gap: 12px; } /* Adjusted padding/gap */
+      .sidebar-tools-area { flex-grow: 1; padding: 8px; overflow-y: auto; display: flex; flex-direction: column; gap: 10px; } /* Adjusted padding/gap */
       .sidebar-tools-area::-webkit-scrollbar { width: 6px; } 
       .sidebar-tools-area::-webkit-scrollbar-track { background: rgba(var(--panel-bg-rgb),0.05); border-radius: 3px; }
       .sidebar-tools-area::-webkit-scrollbar-thumb { background-color: var(--secondary-accent-dark); border-radius: 3px; border: 1px solid transparent; background-clip: content-box;}
@@ -470,7 +470,7 @@
       
 
       
-      .knowledge-branch-sidebar .panel-content-wrapper { color: var(--text-on-dark-bg); padding: 8px; } /* Reduced padding for CollapsiblePanel content */
+      .knowledge-branch-sidebar .panel-content-wrapper { color: var(--text-on-dark-bg); padding: 4px 10px 10px 10px; } /* Reduced padding for CollapsiblePanel content */
       html[data-theme='light'] .knowledge-branch-sidebar .panel-content-wrapper { color: var(--text-secondary); }
 
 
@@ -896,7 +896,7 @@
       /* LIST VIEW MINIMALIST REDESIGN */
       .list-view-item {
         /* Removed: border, margin-bottom, background-color, box-shadow, border-radius */
-        padding: 4px 0; /* Minimal vertical padding */
+        padding: 3px 0; /* Minimal vertical padding */
         border-bottom: 1px solid var(--border-color); /* Separator */
         transition: background-color 0.1s;
       }
@@ -910,7 +910,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 6px 8px; /* Maintain padding for the header content */
+        padding: 4px 8px; /* Maintain padding for the header content */
         /* Removed: border-bottom (now on .list-view-item), cursor: default (dynamic based on clickable name) */
       }
       /* .list-view-item-header.expanded still relevant if description/children push content down */
@@ -941,7 +941,7 @@
         list-style: none; 
         padding: 0; 
         margin-top: 0; /* Remove top margin, rely on parent li padding */
-        margin-left: 8px; 
+        margin-left: 15px; 
         border-left: 1px solid var(--border-color); /* Thinner border */
       } 
       mark.search-highlight { background-color: var(--warning-bg); color: var(--text-primary); font-weight: 600; padding: 1px 0; }
@@ -983,7 +983,7 @@
       }
 
       .knowledge-branch-sidebar .collapsible-panel-header {
-        padding: 8px 10px;
+        padding: 8px 12px;
         cursor: pointer;
         display: flex;
         align-items: center;
@@ -994,7 +994,7 @@
       .knowledge-branch-sidebar .collapsible-panel-header h3 {
         padding: 0;
         margin: 0;
-        font-size: 0.95em;
+        font-size: 1em;
         font-weight: 500;
         color: var(--primary-accent-light);
         flex-grow: 1;
