AI: Keep improving the app as you wish. These are suggested directions : - clean code : optimize, shorten, refactor - better workflow - cleaner and more compact feel - ease of interaction - better color - less error and better error handling - less unintended visual discrepancies which mostly stems from dimensions, text wrapping, object sizes, etc - better graph positioning and less cluttering - quality of life features and buttons

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         --text-tertiary: #7E7E9A;
         --text-on-dark-bg: #EAEAEA; 
         --text-on-accent: #FFFFFF;
+        --text-on-bark: var(--text-primary);
         
         --primary-accent: #0E6655; /* Yggdrasil: Deep Forest Green */
         --primary-accent-rgb: 14,102,85; 
@@ -127,7 +128,8 @@
         --importance-major-text: #0D47A1; 
         --importance-major-border: #90CAF9; 
 
-        --yggdrasil-bark-bg: #3E2723; 
+        --yggdrasil-bark-bg: #F5F0E1; /* Bark color for top-bar/sidebar */
+        --yggdrasil-bark-border: #D2B48C;
         --yggdrasil-leaf-green: #2E7D32; 
         --yggdrasil-rune-glow: var(--primary-accent-light);
 
@@ -147,6 +149,7 @@
         --text-secondary: #B0B0B0;
         --text-tertiary: #888888; /* Slightly lighter tertiary for better contrast */
         --text-on-dark-bg: #EAEAEA;
+        --text-on-bark: var(--text-on-dark-bg);
         
         --primary-accent: #58D68D; 
         --primary-accent-rgb: 88,214,141;
@@ -198,7 +201,8 @@
         --importance-major-text: #BBDEFB;
         --importance-major-border: #42A5F5;
 
-        --yggdrasil-bark-bg: #2A1B16; 
+        --yggdrasil-bark-bg: #2A1B16;
+        --yggdrasil-bark-border: var(--secondary-accent-dark);
         --yggdrasil-leaf-green: #388E3C;
       }
 
