--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <script type="importmap">
     {
       "imports": {
-        "react": "https://esm.sh/react@^19.1.0",
-        "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
+        "react": "https://esm.sh/react@^18.2.0",
+        "react-dom/client": "https://esm.sh/react-dom@^18.2.0/client",
         "@google/generative-ai": "https://esm.sh/@google/generative-ai@^0.14.0",
-        "d3": "https://esm.sh/d3@^7.9.0"
+        "d3": "https://esm.sh/d3@^7.9.0",
+        "uuid": "https://jspm.dev/uuid"
       }
     }
     </script>
