AI: when starting app, if the graph view is activated before the workspace app the graph view is blank. I had to go the workspace and go back tp graph and it works fine. inspect and improve this.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         "react-dom/client": "https://esm.sh/react-dom@^18.2.0/client",
         "@google/generative-ai": "https://esm.sh/@google/generative-ai@^0.14.0",
         "d3": "https://esm.sh/d3@^7.9.0",
-        "uuid": "https://jspm.dev/uuid"
+        "uuid": "https://esm.sh/uuid@^9.0.1"
       }
     }
     </script>
