--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
         --focus-panel-bg: rgba(var(--panel-bg-rgb), 0.9);
         --focus-placeholder-bg: rgba(var(--panel-alt-bg-rgb, 248,249,250), 0.8);
         --focus-placeholder-text: var(--text-tertiary);
+        --focus-placeholder-bg: rgba(var(--panel-alt-bg-rgb, 248,249,250), 0.8);
+        --focus-placeholder-text: var(--text-tertiary);
 
         --font-family-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
         --font-family-serif-display: "Georgia", "Times New Roman", serif;
