AI: Improve the app. Once you decided what to improve, keep it clean, keep your thinking and answer simple. Check what has already been implemented and only modify what is necessary. Here are suggested directions :
1. clean code : optimize, shorten, simplify, refactor, reduce redundancy.
2. position, wrapping of node name in the graph modes.
3. readability of node name (example : keeping the node names horizontal to easy to read) and visual elements (example : avoid overlapping branches, icons, link nodes, etc)
4. graph zoom mechanism
5. element alignment and size (in focus, in graph, in list, in workplace, etc)
6. user workflow of the features of the apps, workflow of big projects
7. cleanliness of the features (example : add a way to close the board that opened when right-clicked)
8. edge cases of user usage
9. edge cases of different screen size and browser issues
10. error handling and debug support
11. develop graph modes or focus mode or list mode based on popular graph manager and visualiser
12. bulk commands in list mode, in graph mode, in focus mode
13. other quality of life features
14. other artistic features.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         --success-color: #28A745;
         --success-bg: #EAF6EC;
         --error-color: #DC3545;
+        --error-color-rgb: 220,53,69;
         --error-bg: #FBEAEA;
         --warning-color: #FFC107; 
         --warning-bg: #FFF8E1;   
@@ -173,7 +174,8 @@
         
         --success-color: #66BB6A; 
         --success-bg: #2E7D32;   
-        --error-color: #EF5350;   
+        --error-color: #EF5350;
+        --error-color-rgb: 239,83,80;
         --error-bg: #C62828;     
         --warning-color: #FFEE58; 
         --warning-bg: #F9A825;    
@@ -264,6 +266,7 @@
         --success-color: #4CAF50; /* Green */
         --success-bg: #E8F5E9;
         --error-color: #F44336; /* Red */
+        --error-color-rgb: 244,67,54;
         --error-bg: #FFEBEE;
         --warning-color: #FF9800; /* Amber */
         --warning-bg: #FFF3E0;
@@ -348,7 +351,8 @@
         
         --success-color: #56d364; 
         --success-bg: rgba(35, 134, 54, 0.2);   
-        --error-color: #f85149;   
+        --error-color: #f85149;
+        --error-color-rgb: 248,81,73;
         --error-bg: rgba(217, 63, 64, 0.2);     
         --warning-color: #eac54f; 
         --warning-bg: rgba(187, 128, 9, 0.2);    
