AI: clean code : optimize, shorten, simplify, refactor, reduce redundancy.

--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
         --graph-node-selected-stroke: var(--primary-accent);
         --graph-node-highlight-stroke: var(--secondary-accent-dark);
 
+        --graph-grid-line-color: rgba(169, 154, 147, 0.2);
+        --graph-radial-color-1: rgba(112, 92, 77, 0.04);
+        --graph-radial-color-2: rgba(46, 125, 50, 0.02);
+
         --focus-stellar-bg: #E8F0F8;
         --focus-connector-stroke: #3498DB;
         --focus-node-asteroid-bg: #A0A0B0;
@@ -206,6 +210,10 @@
         --graph-link-stroke-ecosystem: #A1887F;
         --graph-node-highlight-stroke: #FFCA28;
 
+        --graph-grid-line-color: rgba(var(--primary-accent-rgb), 0.08);
+        --graph-radial-color-1: rgba(var(--primary-accent-rgb),0.05);
+        --graph-radial-color-2: rgba(var(--yggdrasil-leaf-green),0.02);
+
         --importance-minor-bg: rgba(102, 187, 106, 0.1); 
         --importance-minor-text: #C8E6C9; 
         --importance-minor-border: #66BB6A; 
@@ -293,6 +301,10 @@
         --graph-node-stroke: var(--border-color-strong);
         --graph-link-stroke-ecosystem: #A1887F; /* Sepia */
         --graph-node-highlight-stroke: var(--warning-color);
+        
+        --graph-grid-line-color: rgba(184, 175, 158, 0.4);
+        --graph-radial-color-1: rgba(217, 93, 57, 0.03);
+        --graph-radial-color-2: rgba(126, 141, 133, 0.02);
         
         --importance-minor-bg: rgba(121, 85, 72, 0.1); 
         --importance-minor-text: #4E342E;
@@ -386,6 +398,10 @@
         --graph-node-selected-stroke: var(--primary-accent);
         --graph-node-highlight-stroke: var(--secondary-accent-dark);
 
+        --graph-grid-line-color: rgba(0, 131, 143, 0.15);
+        --graph-radial-color-1: rgba(77, 208, 225, 0.1);
+        --graph-radial-color-2: rgba(255, 183, 77, 0.05);
+
         --importance-minor-bg: rgba(var(--secondary-accent-rgb), 0.15); 
         --importance-minor-text: #E65100; 
         --importance-minor-border: #FFCC80; 
@@ -475,6 +491,10 @@
         --graph-link-stroke-ecosystem: #8b949e; 
         --graph-node-selected-stroke: var(--primary-accent);
         --graph-node-highlight-stroke: #eac54f;
+
+        --graph-grid-line-color: rgba(var(--primary-accent-rgb), 0.08);
+        --graph-radial-color-1: rgba(var(--primary-accent-rgb),0.05);
+        --graph-radial-color-2: rgba(var(--yggdrasil-leaf-green),0.02);
 
         --importance-minor-bg: rgba(86, 211, 100, 0.1); 
         --importance-minor-text: #56d364; 
@@ -576,6 +596,10 @@
         --graph-link-stroke-ecosystem: #c0b8d8; 
         --graph-node-selected-stroke: var(--primary-accent);
         --graph-node-highlight-stroke: #ffff00;
+
+        --graph-grid-line-color: rgba(255, 0, 255, 0.08);
+        --graph-radial-color-1: rgba(0, 240, 255, 0.07);
+        --graph-radial-color-2: rgba(255, 0, 255, 0.04);
 
         --importance-minor-bg: rgba(var(--secondary-accent-rgb), 0.1); 
         --importance-minor-text: var(--secondary-accent); 
