--- a/index.html
+++ b/index.html
@@ -685,9 +685,7 @@
         background-color: var(--button-primary-bg); color: var(--button-primary-text); border-color: var(--button-primary-bg); 
         background-image: linear-gradient(to bottom, rgba(255,255,255,0.08), rgba(0,0,0,0.08));
       }
-      html[data-theme='dark'] button.primary,
-      html[data-theme='nebula'] button.primary,
-      html[data-theme='synthwave'] button.primary { background-image: linear-gradient(to bottom, rgba(255,255,255,0.1), rgba(0,0,0,0.1)); }
+      html[data-theme-base='dark'] button.primary { background-image: linear-gradient(to bottom, rgba(255,255,255,0.1), rgba(0,0,0,0.1)); }
       button.primary:hover { background-color: var(--button-primary-hover-bg); border-color: var(--button-primary-hover-bg); }
       button.primary:active { background-color: var(--button-primary-active-bg); }
       
