AI: in focus mode, implement the features below if not implemented, else improve them, then prevent error, better debug support, remove overly complex code and remove redundancy while using best coding practices : 1. to better utilized the vertical space, each originally horizontal line of nodes should be able to take multiple lines. to distinguish this and the other horizontal line of nodes, such as the children nodes, create something to mark the different area of focused node (and the nodes at the same level), the children area, the parent area, like with a transparent color patch or a rectangle dotted line 2. the nodes that have no children should have a visual cue, like a different color or an extra color circle or a hue. 3. realign the box : in case of no children or at root node, there are text box that say things like " no subsystem detected ", revise them to also follow the area marker in 1, align them by their center

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
         --focus-node-shield-color: #5DADE2;
         --focus-node-beacon-color: #F1C40F;
         --focus-panel-text: var(--text-primary);
+        --focus-panel-text-rgb: 55,71,79;
         --focus-panel-bg: rgba(var(--panel-bg-rgb), 0.9);
         --focus-placeholder-bg: rgba(var(--panel-alt-bg-rgb), 0.8);
         --focus-placeholder-text: var(--text-tertiary);
@@ -231,6 +232,7 @@
         /* Focus View override for Dark Theme */
         --focus-stellar-bg: #080B10; 
         --focus-connector-stroke: var(--primary-accent-light); 
+        --focus-connector-stroke-rgb: 104,211,145;
         --focus-node-asteroid-bg: #718096; 
         --focus-node-asteroid-glow: #A0AEC0;
         --focus-node-planet-bg: #2D3748; 
@@ -240,6 +242,7 @@
         --focus-node-shield-color: #03a9f4; 
         --focus-node-beacon-color: #fdd835; 
         --focus-panel-text: #E0E0E0;
+        --focus-panel-text-rgb: 224,224,224;
         --focus-panel-bg: rgba(var(--panel-bg-rgb), 0.9); 
         --focus-placeholder-bg: rgba(var(--panel-alt-bg-rgb), 0.8);
         --focus-placeholder-text: #a0a8c0;
@@ -322,6 +325,7 @@
         /* Focus View override for Sol Theme */
         --focus-stellar-bg: #F5EFE6; 
         --focus-connector-stroke: var(--primary-accent); 
+        --focus-connector-stroke-rgb: 191,54,12;
         --focus-node-asteroid-bg: #BCAAA4; 
         --focus-node-asteroid-glow: #D7CCC8;
         --focus-node-planet-bg: #FFB74D; 
@@ -331,6 +335,7 @@
         --focus-node-shield-color: #64B5F6; 
         --focus-node-beacon-color: var(--secondary-accent-dark);
         --focus-panel-text: var(--text-primary);
+        --focus-panel-text-rgb: 93,64,55;
         --focus-panel-bg: rgba(255, 255, 255, 0.85);
         --focus-placeholder-bg: rgba(253,251,246, 0.8);
         --focus-placeholder-text: var(--text-tertiary);
@@ -419,6 +424,7 @@
         /* Focus View override for Ocean Theme */
         --focus-stellar-bg: #01579B; /* Deep Ocean */
         --focus-connector-stroke: #FFD54F; /* Sunlight through water */
+        --focus-connector-stroke-rgb: 255,213,79;
         --focus-node-asteroid-bg: #455A64; /* Rock */
         --focus-node-asteroid-glow: #607D8B;
         --focus-node-planet-bg: #0288D1; /* Water Planet */
@@ -428,6 +434,7 @@
         --focus-node-shield-color: #4DD0E1; 
         --focus-node-beacon-color: #FFD54F;
         --focus-panel-text: #E1F5FE;
+        --focus-panel-text-rgb: 225,245,254;
         --focus-panel-bg: rgba(1, 87, 155, 0.85);
         --focus-placeholder-bg: rgba(2, 119, 189, 0.8);
         --focus-placeholder-text: #B3E5FC;
@@ -513,6 +520,7 @@
         /* Focus View override for Nebula Theme */
         --focus-stellar-bg: #0a041a; 
         --focus-connector-stroke: #ff00ff; /* Magenta */
+        --focus-connector-stroke-rgb: 255,0,255;
         --focus-node-asteroid-bg: #6e407e; 
         --focus-node-asteroid-glow: #8e5a9e;
         --focus-node-planet-bg: #a777ff; 
@@ -522,6 +530,7 @@
         --focus-node-shield-color: var(--primary-accent); 
         --focus-node-beacon-color: #eac54f;
         --focus-panel-text: #e0cffc;
+        --focus-panel-text-rgb: 224,207,252;
         --focus-panel-bg: rgba(30, 10, 50, 0.9);
         --focus-placeholder-bg: rgba(20, 15, 40, 0.8);
         --focus-placeholder-text: #a098c0;
@@ -618,6 +627,7 @@
         /* Focus View override for Synthwave Theme */
         --focus-stellar-bg: #000000; 
         --focus-connector-stroke: var(--secondary-accent); 
+        --focus-connector-stroke-rgb: 0,240,255;
         --focus-node-asteroid-bg: #4f21a5; 
         --focus-node-asteroid-glow: #6c35d4;
         --focus-node-planet-bg: var(--primary-accent); 
@@ -627,6 +637,7 @@
         --focus-node-shield-color: var(--secondary-accent); 
         --focus-node-beacon-color: #ffff00;
         --focus-panel-text: var(--text-primary);
+        --focus-panel-text-rgb: 240,232,255;
         --focus-panel-bg: rgba(26, 9, 56, 0.85);
         --focus-placeholder-bg: rgba(36, 13, 82, 0.8);
         --focus-placeholder-text: var(--text-secondary);
