AI: in focus mode, implement the features below if not implemented, else improve them, then prevent error, better debug support, remove overly complex code and remove redundancy while using best coding practices : 1. the focused node should have its own area in the center of the "center box". 2. the line coming from parent to center nodes and the line coming from focus nodes and children nodes should have different colors. 3. the nodes that have children currently only have a color circle on edge of original node circle. make it more visually distinct, maybe by increasing the radius or something so that its more different than those having no children but still generally uniform aesthetically.

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         --focus-node-beacon-color: #fdd835; 
         --focus-panel-text: #E0E0E0;
         --focus-panel-text-rgb: 224,224,224;
-        --focus-parent-connector-stroke: #546E7A; /* Darker Cool Grey */
+        --focus-parent-connector-stroke: #718096; /* Medium Cool Grey */
         --focus-panel-bg: rgba(var(--panel-bg-rgb), 0.9); 
         --focus-placeholder-bg: rgba(var(--panel-alt-bg-rgb), 0.8);
         --focus-placeholder-text: #a0a8c0;
